--- a/.github/workflows/defconfig.yml
+++ b/.github/workflows/defconfig.yml
@@ -70,26 +70,27 @@ jobs:
         name: OpenWrt_buildinfo
         path: /build/buildinfo/
         
-    - name: Commit files
-      run: |
-        cd $GITHUB_WORKSPACE
-        git pull
-        cd buildinfo
-        mkdir bak/
-        mv *.buildinfo bak/
-        cp /build/buildinfo/*.buildinfo $GITHUB_WORKSPACE/buildinfo/
-        ls -lha $GITHUB_WORKSPACE/buildinfo/
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git commit -m "Add changes" -a
+    # - name: Commit files
+      # run: |
+        # cd $GITHUB_WORKSPACE
+        # git pull
+        # cd buildinfo
+        # mkdir bak/
+        # mv *.buildinfo bak/
+        # cp /build/buildinfo/*.buildinfo $GITHUB_WORKSPACE/buildinfo/
+        # ls -lha $GITHUB_WORKSPACE/buildinfo/
+        # git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        # git config --local user.name "github-actions[bot]"
+        # git commit -m "Add changes" -a
         
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: buildinfo
+    # - name: Push changes
+      # uses: ad-m/github-push-action@master
+      # with:
+        # github_token: ${{ secrets.GITHUB_TOKEN }}
+        # branch: buildinfo
         
     - name: Generate release tag
+      if: ${{ always() }}
       id: tag
       run: |
         echo "::set-output name=release_tag::$(date +%F_%H%M%S)_Config"
@@ -97,6 +98,7 @@ jobs:
         touch release.txt
         
     - name: Upload firmware to release
+      if: ${{ always() }}
       uses: softprops/action-gh-release@v0.1.8
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
