--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -38,17 +38,6 @@ jobs:
         sudo -E apt-get autoremove -y --purge 
         sudo -E apt-get clean -y 
         
-    - name: Show system
-      run: |
-        echo -e "Total CPU cores\t: $(nproc)"
-        cat /proc/cpuinfo | grep 'model name'
-        free -h
-        uname -a
-        [ -f /proc/version ] && cat /proc/version
-        [ -f /etc/issue.net ] && cat /etc/issue.net
-        [ -f /etc/issue ] && cat /etc/issue
-        ulimit -a
-        
     - name: Clone Source
       run: |
         echo "Clone Source":$(date +%F_%H%M%S)
@@ -158,16 +147,10 @@ jobs:
       run: |
         cd /build/lede/
         echo -e "$(nproc) thread compile"
-        make -j$(($(nproc) + 1)) || make -j$(($(nproc) + 1)) V=s 2>&1 | tee -a build.log 
+        make -j$(($(nproc) + 1)) || make -j1 V=s
         tree bin/
         tree -d bin/
         cd /build/lede/bin/targets/armvirt/64 && ls -lSha
-
-    - name: Check Error
-      if: ${{ failure() }}
-      run: |
-        echo "Check Error":$(date +%F_%H%M%S)
-        grep -C 20 -i -E "^make.*(error|[12345]...Entering dir)" build.log
 
     - name: Prepare artifact
       run: |
