--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -30,13 +30,13 @@ jobs:
         echo "Init Building:$(date +%F_%H%M%S)"
         sudo -E swapoff -a
         docker rmi $(docker images -q) 
-        sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android /opt/ghc /swapfile /etc/apt/sources.list.d
-        sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
-        sudo -E apt-get update -y 
-        sudo -E apt-get full-upgrade -y 
-        sudo -E apt-get install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync rdate ca-certificates
-        sudo -E apt-get autoremove -y --purge 
-        sudo -E apt-get clean -y 
+        sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android /opt/ghc /swapfile /etc/apt/sources.list.d
+        sudo apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
+        sudo apt-get update -y 
+        sudo apt-get full-upgrade -y 
+        sudo apt-get install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync rdate ca-certificates
+        sudo apt-get autoremove -y --purge 
+        sudo apt-get clean -y 
         
     - name: Clone Source
       run: |
